test/parser/valid/class_structure/implements.java
public class A implements java.io.Serializable {
  public A() {}
  private int x;
}

