test/parser/bad/_custom/non_existing_escape.java
public class A {
  public A() {}
  protected String x = "\z";
}

